<resources>
    <string name="app_name">HW1_GuessingGame</string>
    <string name="number_guess_game">Number Guess Game</string>
    <string name="try_to_guess_the_number_i_m_thinking_of_from_1_1000">Try to guess the number I\'m thinking of, from 1-1000</string>
    <string name="hint">Hint: </string>
    <string name="number">Number</string>
    <string name="play_again">Play Again</string>
    <string name="numberText">\?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="erase"><![CDATA[<<<<]]></string>
    <string name="tryt">TRY</string>
    <string name="attempts">Attempts:</string>
</resources>
