<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/number_guess_game"
        android:textColor="#E59F71"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_to_guess_the_number_i_m_thinking_of_from_1_1000"
        android:textColor="#E59F71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/numberText"
        android:layout_width="380dp"
        android:layout_height="227dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="24dp"
        android:text="@string/numberText"
        android:textAlignment="center"
        android:textColor="#BA5A31"
        android:textSize="200sp"
        app:layout_constraintBottom_toTopOf="@+id/textHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textHint"
        android:layout_width="137dp"
        android:layout_height="18dp"
        android:layout_marginBottom="12dp"
        android:text="@string/hint"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="265dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn1"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn4"
            android:layout_row="1"
            android:layout_column="0"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:backgroundTint="#69DC9E"
            android:onClick="numberPressed"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnErase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:backgroundTint="#27a562"
            android:onClick="clickErase"
            android:text="@string/erase"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:backgroundTint="#27a562"
            android:onClick="clickTry"
            android:text="@string/tryt"
            android:textSize="24sp"
            android:textStyle="bold" />

    </GridLayout>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#BA5A31"
        android:onClick="clickBtnPlayAgain"
        android:text="@string/play_again"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/attemptsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/attempts"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnPlayAgain"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.444" />

</androidx.constraintlayout.widget.ConstraintLayout>